--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "@japa/plugin-adonisjs": "^3.0.1",
     "@japa/runner": "^3.1.4",
     "@swc/core": "^1.7.22",
+    "@types/ffmpeg": "^1.0.7",
+    "@types/fluent-ffmpeg": "^2.1.26",
     "@types/luxon": "^3.4.2",
     "@types/node": "^22.5.1",
     "eslint": "^9.9.1",
@@ -57,8 +59,11 @@
     "@adonisjs/lucid": "^21.2.0",
     "@vinejs/vine": "^2.1.0",
     "better-sqlite3": "^11.3.0",
+    "ffmpeg": "^0.0.4",
+    "fluent-ffmpeg": "^2.1.3",
     "luxon": "^3.5.0",
-    "reflect-metadata": "^0.2.2"
+    "reflect-metadata": "^0.2.2",
+    "socket.io": "^4.7.5"
   },
   "hotHook": {
     "boundaries": [
