--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,6 @@ HOST=localhost
 LOG_LEVEL=info
 APP_KEY=5aceWqXjPQXTU83k_ohqmhE8vBDETXst
 NODE_ENV=development
+REDIS_HOST=127.0.0.1
+REDIS_PORT=6379
+REDIS_PASSWORD=
